--- a/project.html
+++ b/project.html
@@ -44,18 +44,13 @@
 
  <tr>
   <td class="infotd">
-    <h3>Bootcamp 2020: Forest scene</h3>
+    <h3>Bootcamp 2021: Lonely Pong</h3>
     <p>
 	My first programming project, concluding the 2 week Programming Bootcamp at 
-	City (2020). This Processing project demonstrates a comprehensive understanding 
-	of the use of arrays, loops, and randomness. I created a forest scene in which 
-	details of each tree (e.g. position, trunk color and size, crown color and shape) 
-	are stored in parallel 2D arrays. Trees are arranged in a regular grid but their 
-	positions are jittered by  small random offsets to create the impression of a real 
-	forest. Similarly, each tree trunk and crown has a individual color shade, obtained
-	using  random variations of brown and green. Finally, the forest changes over time:
-	trees grow and their crowns become more pale to suggest seasonal change ( from 
-        spring to autumn).
+	City (2021). This Processing project demonstrates a comprehensive understanding 
+	of the use of classes and interaction between them. I created a "single-player pong". The paddle is
+    controlled with the w and s keys to move up and down. The ball starts in the middle of the screen and
+    moves left always but it can go up or down using random().
     </p>
 
     <p>
