--- a/project.html
+++ b/project.html
@@ -50,16 +50,13 @@
 	City (2021). This Processing project demonstrates a comprehensive understanding 
 	of the use of classes and interaction between them. I created a "single-player pong". The paddle is
     controlled with the w and s keys to move up and down. The ball starts in the middle of the screen and
-    moves left always but it can go up or down using random().
+    moves left always but it can go up or down using random(). The player will then rebound it against the wall
+    until they miss. Every time they hit the ball against the paddle their score increases by 1.
     </p>
 
     <p>
-      Check out the code on Github: <a href="https://radujianu.github.io/">https://radujianu.github.io/</a>
+      Check out the code on Github: <a href="https://github.com/SHAZ1NE/SyedShameerAlam">hhttps://github.com/SHAZ1NE/SyedShameerAlam/</a>
     </p>
-  <td>
-	<video width="429" height="200" controls>
-	<source src="Untitled.mp4" type="video/mp4">
-	</video>
   <td>
   </td>
 <tr>
