--- a/project.html
+++ b/project.html
@@ -52,8 +52,12 @@
     </p>
 
     <p>
-      Check out the code on Github: <a href="https://github.com/SHAZ1NE/SyedShameerAlam">hhttps://github.com/SHAZ1NE/SyedShameerAlam/</a>
+      Check out the code on Github: <a href="https://github.com/SHAZ1NE/SyedShameerAlam">https://github.com/SHAZ1NE/SyedShameerAlam</a>
     </p>
+  <td>
+	<video width="429" height="200" controls>
+	<source src="Project Demo - Syed Shameer Alam.mp4" type="video/mp4">
+	</video>
   <td>
   </td>
 <tr>
